# ChangeLog for media-libs/hamlib
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.23 2007/11/09 19:44:14 lavajoe Exp $

  13 May 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> +hamlib-1.2.7.1.ebuild:
  version bump to 1.2.7.1 (bug 219057). Removed unnecessary X switch to econf.
  econf dies off itself. Removed unnecessary gd dependency (rigmatrix got never build,
  intended only for website maintenance).

  09 Nov 2007; Joe Peterson <lavajoe@gentoo.org> hamlib-1.2.6.1.ebuild:
  Add ~x86-fbsd keyword and elibtoolize (bug #198475)

*hamlib-1.2.6.1 (16 Jun 2007)

  16 Jun 2007; Anant Narayanan <anant@gentoo.org> +hamlib-1.2.6.1.ebuild:
  vBump to 1.2.6.1, close bug #178994

  11 Apr 2007; Christian Heim <phreak@gentoo.org> hamlib-1.2.4.ebuild,
  hamlib-1.2.5.ebuild:
  Use proper helper functions (#173884). Quoting fixes.

  28 Nov 2006; Michael Sterrett <mr_bones_@gentoo.org> hamlib-1.2.4.ebuild,
  hamlib-1.2.5.ebuild:
  fix dep syntax

  28 Nov 2006; Christian Faulhammer <opfer@gentoo.org> hamlib-1.2.4.ebuild,
  hamlib-1.2.5.ebuild:
  moved tcltk USE flag over to separate tk and tcl flags, see bug #17808

*hamlib-1.2.5 (06 Jul 2006)

  06 Jul 2006; Jon Hood <squinky86@gentoo.org> -hamlib-1.2.1.ebuild,
  -hamlib-1.2.2.ebuild, -hamlib-1.2.3.ebuild, hamlib-1.2.4.ebuild,
  +hamlib-1.2.5.ebuild:
  Mark 1.2.4 stable on amd64 with fixes from Michael Weyershauser
  <thedude0001@gmx.de> in bug #138107. Add newer version of hamlib.
  Remove old versions.

  23 Jun 2006; Simon Stelling <blubb@gentoo.org> +metadata.xml,
  hamlib-1.2.4.ebuild:
  put metadata.xml in place and restrict test phase for bug 136733

  19 Mar 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  hamlib-1.2.1.ebuild, hamlib-1.2.2.ebuild, hamlib-1.2.3.ebuild,
  hamlib-1.2.4.ebuild:
  Remove unnecessary X dependency.

  13 Sep 2005; Aron Griffis <agriffis@gentoo.org> hamlib-1.2.4.ebuild:
  Mark 1.2.4 stable on alpha
