@@ -1,5 +1,5 @@
 AUX hamlib-pkgconfig-fix.diff 373 RMD160 fe7a8275b28ea73480b9bf1eb916302d84eb351f SHA1 bc0abd242bc35897000d405bc1fb831a48fad976 SHA256 6c45445bf2bc12b9738b6315543df662a0dd36167a57a3623bb11446e882802c
 DIST hamlib-1.2.7.1.tar.gz 1541572 RMD160 41fd458660c1267176f3bbe28830a14eed139254 SHA1 32a174ddb831f06f4befdd36762c9a63b93ec968 SHA256 709504ef1774b69ab15ebfb9ec3d1e605307072300ada891e8baf50f61227f03
-EBUILD hamlib-1.2.7.1.ebuild 1595 RMD160 131ea1be421d137955c6dd781c5e77a50c46a770 SHA1 c4205d86fa83c475bf2b7b1fa3fb82d3de5aef4c SHA256 3ad5622a131430c6728323699a934abc198988cfa7523533d23372aeb3cd7cc6
-MISC ChangeLog 4438 RMD160 ab9b87a74ed80b57903a3b12145ede29032f1195 SHA1 33a0e8193a777807ccd9661a7782c5937b3b1756 SHA256 c4112564b17335c9e4314e3bbbea3fb1595df15b4a950321fd6e2dfd034cf9e4
+EBUILD hamlib-1.2.7.1.ebuild 1529 RMD160 6dc681de5de2d6af3b73a0ab6736514891b13112 SHA1 9b5e5e66655da6a70f4ecc3201f7a998082970d6 SHA256 dafc5ff29a276f37b1cf1742cef9cedd7e381ed7ec7ebdddef6147498d94881b
+MISC ChangeLog 4670 RMD160 7feb6ad1880d01927d504429363b48ae7831ad01 SHA1 a80c4c32932cafdca5b139bd342d2180f1cc886a SHA256 ba21b4d7805e5aab07d66761039959254da9963011aeb6954f9899414dc70c87
 MISC metadata.xml 269 RMD160 db32c3f6333d9d443dc57593f5ddf1ebbfebfb06 SHA1 121ea86b1bcc7e9815db04cfc19d4ef3a255a9cd SHA256 91e2fbe162d28169b6d852a358737d2e535babf764827246f23dd31e967d447f
