@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/hamlib
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.23 2007/11/09 19:44:14 lavajoe Exp $
+
+  22 May 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
+  hamlib-1.2.7.1.ebuild:
+  Reworked ebuild. Revision bump. Dropped unnessecary use flags X and gd.
+  removed autoconf and automake from depend, switched use flag tk to tcl.
 
   13 May 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> +hamlib-1.2.7.1.ebuild:
   version bump to 1.2.7.1 (bug 219057). Removed unnecessary X switch to econf.
